--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,24 @@ services:
     ports:
       - 8080:8080 
     environment:
+      - KC_HOSTNAME=http://localhost:8080
       - KC_BOOTSTRAP_ADMIN_USERNAME=admin 
-      - KC_BOOTSTRAP_ADMIN_PASSWORD=admin  
+      - KC_BOOTSTRAP_ADMIN_PASSWORD=admin
+      - KC_DB=postgres
+      - KC_DB_USERNAME=keycloak
+      - KC_DB_PASSWORD=keycloak
+      - KC_DB_URL=jdbc:postgresql://postgres:5432/keycloak
     volumes:
       - ./keycloak/data:/opt/keycloak/data
     command: start-dev --import-realm
+  
+  postgres:
+    image: postgres:17
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=keycloak
+      - POSTGRES_PASSWORD=keycloak
+      - POSTGRES_DB=keycloak
+    volumes:
+      - ./postgres/data:/var/lib/postgresql/data
