--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
       - 8080:8080 
     environment:
       - KC_HOSTNAME=http://localhost:8080
+      - KC_HOSTNAME_STRICT_HTTPS='true'
+      - KC_TLS_HOSTNAME_VERIFIER=ANY
+      - KC_HTTP_ENABLED=true
       - KC_BOOTSTRAP_ADMIN_USERNAME=admin 
       - KC_BOOTSTRAP_ADMIN_PASSWORD=admin
       - KC_DB=postgres
